<resources>

    <!-- Credenciales aplicativo -->

    <string name="app_name">Phovl</string>
    <string name="version">Version 1.0.0</string>

    <!-- Login -->

    <string name="titulo_login">Ingrese Sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta?, Registrate</string>

    <!-- Registro -->

    <!-- Pantalla De Administracion -->

    <string name="txt_productos">Productos</string>
    <string name="txt_estadisticas">Estadisticas</string>
    <string name="txt_configuracion">Configuracion</string>


    <!-- Seleccion De Locales -->

    <string name="lbl_seleccionar_local">Seleccione el local que desea administrar</string>
    <string name="lbl_bienvenido">Bienvenido!</string>


    <!-- Eleccion -->

    <!-- Mas Datos -->

</resources>